CSS Heirarchy or things to do
This is the best order to have your css as it goes from a larger broader perspective down to a quite narrow focus. Most coders work this way

--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -1,8 +1,20 @@
+/*-------------------------VARIABLE*/
+
+/*-------------------------GLOBAL DEFAULTS*/
+
+/*-------------------------LAYOUT*/
+
+/*--------------------------HEADER*/
+
 header {
     background-color:#084e3f;
 
 }
-/* this is comment*/
+/* ------------------------NAVIGATION*/
+
+/*-------------------------FOOTER*/
+
+
 
 
 
