added foooter variable

--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -45,13 +45,15 @@
 /*--------------------------HEADER*/
 
 header {
-    background-color: var(--colour-green);
+    background-color: var(--alternative-bg-colour);
 
 }
 /* ------------------------NAVIGATION*/
 
 /*-------------------------FOOTER*/
-
+footer {
+    background-color: var(--alternative-bg-colour);
+}
 /*-------------------------MODULES*/
 
 
