--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -39,7 +39,10 @@
 
 
 /*-------------------------GLOBAL DEFAULTS*/
+*{
+box-sizing: border-box;
 
+}
 /*-------------------------LAYOUT*/
 
 /*--------------------------HEADER*/
