--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -41,8 +41,26 @@
 /*-------------------------GLOBAL DEFAULTS*/
 *{
 box-sizing: border-box;
+}
+
+body {
+    color: var(--main-text-color);
+    font-size: 18px;
+    line-height: 1.8;
+    font-family: Arial, Helvetica, sans-serif
+
 
 }
+
+
+
+
+
+
+
+
+
+
 /*-------------------------LAYOUT*/
 
 /*--------------------------HEADER*/
