--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -47,13 +47,15 @@ body {
     color: var(--main-text-color);
     font-size: 18px;
     line-height: 1.8;
-    font-family: Arial, Helvetica, sans-serif
+    font-family: Arial, Helvetica, sans-serif;
+    }
 
-
+video { 
+    max-width:  100%;
 }
-
-
-
+img {
+        max-width: 100%
+}
 
 
 
