--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -70,9 +70,12 @@ img {
     padding-right: var(--padder);
 
     margin-bottom: var(--spacer-large);
+    margin-left: auto;
+    margin-right: auto;
+
 }
 
-
+ 
 
 /*--------------------------HEADER*/
 
