full width layout
gives directions for the margin and spacing overall at 1200px - we've already said that our maxwidth is 1200px

--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -75,7 +75,10 @@ img {
 
 }
 
- 
+.layout-full-width { 
+    margin-bottom: var(--spacer-large);
+    width: 100%
+}
 
 /*--------------------------HEADER*/
 
