--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -41,7 +41,17 @@
   }
 
 
+@media screen and (min-width:800px) { 
 
+    :root {
+
+        --font-size-site-title: 54px;
+        --font-size-page-title: 80px;
+        --font-size-section-title: 48px;
+
+        --padder:  2%;
+    } 
+}
 
 /*-------------------------GLOBAL DEFAULTS*/
 *{
