--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -222,10 +222,21 @@ border-bottom: 1px solid var(--border-color);
 
 .nav-inner a {
     border-bottom: 2px solid transparent;
-
 }
 }
 
+
+.nav-inner{
+    overflow: hidden;
+}
+
+.nav-inner[aria-expanded="false"] {
+    max-height: 0;
+}
+
+.nav-inner[aria-expanded="true"] { 
+    max-height: 100vh;
+}
 /*-------------------------FOOTER*/
 
 
