--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -282,3 +282,51 @@ label {
 
 /* --------------------- MODULES */
 
+/*hero module*/
+
+.hero-module img {
+    width: 100%:
+
+}
+@media screen and (min-width: 800px) {
+    .hero-module 
+        { position: relative;
+    
+    }  
+    .hero-content { position: absolute;
+    bottom: 0;
+
+height: 100%;
+width:  100%;
+
+text-align: center;
+display: flex;
+align-items: center; 
+}
+
+/* text shadow takes 4 arguments  x axis, y axis,  spread (width),  and colour.*/
+
+.heading-main{ 
+color: white;
+text-shadow: 0px 1px 10px var(--strong-text-color);
+
+
+    
+}/* end of the media query making text go in the pic on desktop but drop out on mobile view*/
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
